# patch-seg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: notebook_utils.py  plot-stratified-metrics.ipynb
patchseg/: custom_backbones.py  dataset.py  loss.py  model.py  transforms.py  vision_backbones.py
scripts/: download-coco.sh  train.py
